@@ -4,7 +4,7 @@
     "seed": 1234567890
   },
   "tight": {
-    "timeLimit": 240,
+    "timeLimit": 400,
     "cyclePerTime": 4.0,
     "dose": 100.0,
     "doseTime": 150.0,
@@ -15,7 +15,7 @@
     "k_10": 0.1
   },
   "loose": {
-    "timeLimit": 240,
+    "timeLimit": 400,
     "cyclePerTime": 10.0,
     "dose": 10.0,
     "doseTime": 150.0,
@@ -39,14 +39,15 @@
   },
   "looseDyn": {
     "drugPotency": 0.5,
-    "morbidity": 0.1,
+    "morbidity": 1.0,
     "morbFactor": 0.000001,
     "morb2mp": 1.0,
     "mp2mpo": 1.0,
     "detectorSites": 20,
     "P_occupySite": 0.5,
     "P_releaseMPO": 0.5,
-    "blockDuration": 5.0
+    "blockDurationMin": 1.0,
+    "blockDurationMax": 10.0
   },
   "ldRates": {
     "MP": [{
