@@ -29,7 +29,8 @@ public class LooseDyn extends Loose {
             params.looseDyn.get("mp2mpo").doubleValue(),
             params.looseDyn.get("P_occupySite").doubleValue(),
             params.looseDyn.get("P_releaseMPO").doubleValue(),
-            params.looseDyn.get("blockDuration").doubleValue());
+            params.looseDyn.get("blockDurationMin").doubleValue(),
+            params.looseDyn.get("blockDurationMax").doubleValue());
     LocaleDyn periph = new LocaleDyn(this, 2, 0.0, params.loose.get("vp").doubleValue());
 
     periph.setMorbidity(morbidity,
